# Pacman-Term

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  debug.sh  run.sh  teste.mk
assets/: maze-small.txt  maze.txt
src/: arena.c  arena.h  constants.c  constants.h  error.c  error.h  game.c  game.h  ghost.c  ghost.h  ghost_manager.c  ghost_manager.h  ghosts.c  ghosts.h  graphics.c  graphics.h  main.c  matrix.c  matrix.h  mazes.c  mazes.h  object.c  object.h  player.c  player.h  time_state.c  time_state.h  utils.c  utils.h  vector.c  vector.h
src/arenas/: 1.txt
